Add self update

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -28,7 +28,7 @@ on:
       extensions:
         description: Extensions to Compile (comma separated)
         required: true
-        default: "bcmath,calendar,ctype,curl,dba,dom,exif,filter,fileinfo,iconv,mbstring,mbregex,openssl,pcntl,pdo,pdo_mysql,pdo_sqlite,phar,posix,readline,simplexml,sockets,sqlite3,tokenizer,xml,xmlreader,xmlwriter,zip,zlib,sodium,swoole"
+        default: "bcmath,calendar,ctype,curl,dba,dom,exif,filter,fileinfo,iconv,mbstring,mbregex,openssl,pcntl,pdo,pdo_mysql,pdo_sqlite,phar,posix,readline,simplexml,sockets,sqlite3,tokenizer,xml,xmlreader,xmlwriter,zip,zlib,sodium,swoole,sessions"
         type: string
       debug:
         description: debug build
@@ -55,7 +55,7 @@ on:
       extensions:
         description: extensions to compile (comma separated)
         required: true
-        default: "bcmath,calendar,ctype,curl,dba,dom,exif,filter,fileinfo,iconv,mbstring,mbregex,openssl,pcntl,pdo,pdo_mysql,pdo_sqlite,phar,posix,readline,simplexml,sockets,sqlite3,tokenizer,xml,xmlreader,xmlwriter,zip,zlib,sodium,swoole"
+        default: "bcmath,calendar,ctype,curl,dba,dom,exif,filter,fileinfo,iconv,mbstring,mbregex,openssl,pcntl,pdo,pdo_mysql,pdo_sqlite,phar,posix,readline,simplexml,sockets,sqlite3,tokenizer,xml,xmlreader,xmlwriter,zip,zlib,sodium,swoole,sessions"
         type: string
       debug:
         type: boolean
@@ -65,16 +65,22 @@ env:
 
 jobs:
   build:
-    name: build ${{ inputs.version }} on macOS x86_64
+    name: Build ${{ github.ref_name }} on macOS x86_64
     runs-on: macos-latest
+    strategy:
+      matrix:
+        os:
+          - "macos-aarch64"
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
       - name: Setup PHP
         uses: shivammathur/setup-php@master
         with:
           php-version: 8.2
           extensions: mbstring, bcmath
           tools: composer:v2
+
       - name: Checkout crazywhalecc/static-php-cli
         uses: actions/checkout@v4
         with:
@@ -96,9 +102,19 @@ jobs:
       - if: steps.cache-composer-deps.outputs.cache-hit != 'true'
         run: composer install
 
-      - name: Convert extensions to SHA256
+      - name: Resolve Variables
+        id: vars
         run: |
-          echo "SPC_EXTENSIONS_SHA256=$(echo -n ${{ inputs.extensions }} | shasum -a 256 | awk '{print $1}')" >> $GITHUB_ENV
+          SPC_EXTENSIONS="bcmath,calendar,ctype,curl,dba,dom,exif,session,filter,fileinfo,iconv,mbstring,mbregex,openssl,pcntl,pdo,pdo_mysql,pdo_sqlite,phar,posix,readline,simplexml,sockets,sqlite3,tokenizer,xml,xmlreader,xmlwriter,zip,zlib,sodium,swoole,sessions"
+          SPC_EXTENSIONS_SHA256=$(echo -n $SPC_EXTENSIONS | shasum -a 256 | awk '{print $1}')
+          PHP_VERSION=8.2
+
+          echo "SPC_EXTENSIONS=$SPC_EXTENSIONS" >> $GITHUB_OUTPUT
+          echo "SPC_EXTENSIONS_SHA256=$SPC_EXTENSIONS_SHA256" >> $GITHUB_OUTPUT
+          echo "PHP_VERSION=$PHP_VERSION" >> $GITHUB_OUTPUT
+          echo "CACHE_KEY=php-$PHP_VERSION-dependencies-$SPC_EXTENSIONS_SHA256" >> $GITHUB_OUTPUT
+          echo "FILENAME=$GITHUB_WORKSPACE/dist/dev-${{ github.ref_name }}-${{ matrix.os }}" >> $GITHUB_OUTPUT
+          echo "CHECKSUMS=$GITHUB_WORKSPACE/dist/CHECKSUMS" >> $GITHUB_OUTPUT
 
       - id: cache-download
         uses: actions/cache/restore@v3
@@ -106,28 +122,18 @@ jobs:
           path: |
             spc/downloads
             spc/buildroot
-          key: php-${{ inputs.version }}-dependencies-${{ env.SPC_EXTENSIONS_SHA256 }}
-
-      - if: inputs.debug == true
-        run: echo "SPC_BUILD_DEBUG=--debug" >> $GITHUB_ENV
-
-      - if: ${{ inputs.build-cli == true }}
-        run: echo "SPC_BUILD_CLI=--build-cli" >> $GITHUB_ENV
-      - if: ${{ inputs.build-micro == true }}
-        run: echo "SPC_BUILD_MICRO=--build-micro" >> $GITHUB_ENV
-      - if: ${{ inputs.build-fpm == true }}
-        run: echo "SPC_BUILD_FPM=--build-fpm" >> $GITHUB_ENV
+          key: ${{ steps.vars.outputs.CACHE_KEY }}
 
       - name: Setup Spc
         run: composer update --no-dev --classmap-authoritative
         working-directory: spc
 
       - if: steps.cache-download.outputs.cache-hit != 'true'
-        run: ./bin/spc download --with-php=${{ inputs.version }} --for-extensions=${{ inputs.extensions }} ${{ env.SPC_BUILD_DEBUG }}
+        run: ./bin/spc download --with-php=8.2 --for-extensions=${{ steps.vars.outputs.SPC_EXTENSIONS }} --debug
         working-directory: spc
 
       - if: steps.cache-download.outputs.cache-hit != 'true'
-        run: ./bin/spc build ${{ inputs.extensions }} ${{ env.SPC_BUILD_DEBUG }} ${{ env.SPC_BUILD_CLI }} ${{ env.SPC_BUILD_MICRO }} ${{ env.SPC_BUILD_FPM }}
+        run: ./bin/spc build --build-micro --build-cli --with-micro-fake-cli ${{ steps.vars.outputs.SPC_EXTENSIONS }}
         working-directory: spc
 
       - if: steps.cache-download.outputs.cache-hit != 'true'
@@ -137,28 +143,25 @@ jobs:
           path: |
             spc/downloads
             spc/buildroot
-          key: php-${{ inputs.version }}-dependencies-${{ env.SPC_EXTENSIONS_SHA256 }}
+          key: ${{ steps.vars.outputs.CACHE_KEY }}
 
       - name: Build PHAR
-        run: |
-          box compile
-          mv dev.phar dist/dev.phar
+        run: php dev app:build dev.phar --version=${{ github.ref_name }}
 
       - name: Build DEV binary for macOS
         working-directory: spc
         run: |
-            php -d memory_limit=-1 bin/spc micro:combine $GITHUB_WORKSPACE/dist/dev.phar -O $GITHUB_WORKSPACE/dist/dev
+            php -d memory_limit=-1 bin/spc micro:combine $GITHUB_WORKSPACE/builds/dev.phar -O ${{ steps.vars.outputs.FILENAME }}
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: dev-macos-aarch64
-          path: dist/dev
+      - name: "Create Checksums"
+        run: sha256sum ${{ steps.vars.outputs.FILENAME }} > ${{ steps.vars.outputs.CHECKSUMS }}
 
-      - uses: actions/upload-artifact@v3
+      - name: Upload binaries to release
+        uses: softprops/action-gh-release@v1
+        if: ${{startsWith(github.ref, 'refs/tags/') }}
         with:
-          name: build-meta
-          path: |
+          files: |
+            ${{ steps.vars.outputs.FILENAME }}
+            ${{ steps.vars.outputs.CHECKSUMS }}
             spc/buildroot/build-extensions.json
             spc/buildroot/build-libraries.json
-
