--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,10 @@
         "php": "^8.1",
         "ext-pcntl": "*",
         "ext-posix": "*",
+        "ext-session": "*",
         "amphp/process": "^2.0",
+        "guzzlehttp/guzzle": "^7.5",
+        "illuminate/http": "^10.0",
         "laravel-zero/framework": "^10.2.0",
         "laravel-zero/phar-updater": "^1.3",
         "laravel/prompts": "^0.1.0",
