--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -55,7 +55,7 @@ on:
       extensions:
         description: extensions to compile (comma separated)
         required: true
-        default: "bcmath,calendar,ctype,curl,dba,dom,exif,filter,fileinfo,iconv,mbstring,mbregex,openssl,pcntl,pdo,pdo_mysql,pdo_sqlite,phar,posix,readline,simplexml,sockets,sqlite3,tokenizer,xml,xmlreader,xmlwriter,zip,zlib,sodium,swoole,sessions"
+        default: "bcmath,calendar,ctype,curl,dba,dom,exif,filter,fileinfo,iconv,mbstring,mbregex,openssl,pcntl,pdo,pdo_mysql,pdo_sqlite,phar,posix,readline,simplexml,sockets,sqlite3,tokenizer,xml,xmlreader,xmlwriter,zip,zlib,sodium,swoole"
         type: string
       debug:
         type: boolean
@@ -65,22 +65,16 @@ env:
 
 jobs:
   build:
-    name: Build ${{ github.ref_name }} on macOS x86_64
+    name: build ${{ inputs.version }} on macOS x86_64
     runs-on: macos-latest
-    strategy:
-      matrix:
-        os:
-          - "macos-aarch64"
     steps:
-      - uses: actions/checkout@v4
-
+      - uses: actions/checkout@v3
       - name: Setup PHP
         uses: shivammathur/setup-php@master
         with:
           php-version: 8.2
           extensions: mbstring, bcmath
           tools: composer:v2
-
       - name: Checkout crazywhalecc/static-php-cli
         uses: actions/checkout@v4
         with:
@@ -102,19 +96,9 @@ jobs:
       - if: steps.cache-composer-deps.outputs.cache-hit != 'true'
         run: composer install
 
-      - name: Resolve Variables
-        id: vars
+      - name: Convert extensions to SHA256
         run: |
-          SPC_EXTENSIONS="bcmath,calendar,ctype,curl,dba,dom,exif,session,filter,fileinfo,iconv,mbstring,mbregex,openssl,pcntl,pdo,pdo_mysql,pdo_sqlite,phar,posix,readline,simplexml,sockets,sqlite3,tokenizer,xml,xmlreader,xmlwriter,zip,zlib,sodium,swoole,sessions"
-          SPC_EXTENSIONS_SHA256=$(echo -n $SPC_EXTENSIONS | shasum -a 256 | awk '{print $1}')
-          PHP_VERSION=8.2
-
-          echo "SPC_EXTENSIONS=$SPC_EXTENSIONS" >> $GITHUB_OUTPUT
-          echo "SPC_EXTENSIONS_SHA256=$SPC_EXTENSIONS_SHA256" >> $GITHUB_OUTPUT
-          echo "PHP_VERSION=$PHP_VERSION" >> $GITHUB_OUTPUT
-          echo "CACHE_KEY=php-$PHP_VERSION-dependencies-$SPC_EXTENSIONS_SHA256" >> $GITHUB_OUTPUT
-          echo "FILENAME=$GITHUB_WORKSPACE/dist/dev-${{ github.ref_name }}-${{ matrix.os }}" >> $GITHUB_OUTPUT
-          echo "CHECKSUMS=$GITHUB_WORKSPACE/dist/CHECKSUMS" >> $GITHUB_OUTPUT
+          echo "SPC_EXTENSIONS_SHA256=$(echo -n ${{ inputs.extensions }} | shasum -a 256 | awk '{print $1}')" >> $GITHUB_ENV
 
       - id: cache-download
         uses: actions/cache/restore@v3
@@ -122,18 +106,28 @@ jobs:
           path: |
             spc/downloads
             spc/buildroot
-          key: ${{ steps.vars.outputs.CACHE_KEY }}
+          key: php-${{ inputs.version }}-dependencies-${{ env.SPC_EXTENSIONS_SHA256 }}
+
+      - if: inputs.debug == true
+        run: echo "SPC_BUILD_DEBUG=--debug" >> $GITHUB_ENV
+
+      - if: ${{ inputs.build-cli == true }}
+        run: echo "SPC_BUILD_CLI=--build-cli" >> $GITHUB_ENV
+      - if: ${{ inputs.build-micro == true }}
+        run: echo "SPC_BUILD_MICRO=--build-micro" >> $GITHUB_ENV
+      - if: ${{ inputs.build-fpm == true }}
+        run: echo "SPC_BUILD_FPM=--build-fpm" >> $GITHUB_ENV
 
       - name: Setup Spc
         run: composer update --no-dev --classmap-authoritative
         working-directory: spc
 
       - if: steps.cache-download.outputs.cache-hit != 'true'
-        run: ./bin/spc download --with-php=8.2 --for-extensions=${{ steps.vars.outputs.SPC_EXTENSIONS }} --debug
+        run: ./bin/spc download --with-php=${{ inputs.version }} --for-extensions=${{ inputs.extensions }} ${{ env.SPC_BUILD_DEBUG }}
         working-directory: spc
 
       - if: steps.cache-download.outputs.cache-hit != 'true'
-        run: ./bin/spc build --build-micro --build-cli --with-micro-fake-cli ${{ steps.vars.outputs.SPC_EXTENSIONS }}
+        run: ./bin/spc build ${{ inputs.extensions }} ${{ env.SPC_BUILD_DEBUG }} ${{ env.SPC_BUILD_CLI }} ${{ env.SPC_BUILD_MICRO }} ${{ env.SPC_BUILD_FPM }}
         working-directory: spc
 
       - if: steps.cache-download.outputs.cache-hit != 'true'
@@ -143,25 +137,28 @@ jobs:
           path: |
             spc/downloads
             spc/buildroot
-          key: ${{ steps.vars.outputs.CACHE_KEY }}
+          key: php-${{ inputs.version }}-dependencies-${{ env.SPC_EXTENSIONS_SHA256 }}
 
       - name: Build PHAR
-        run: php dev app:build dev.phar --version=${{ github.ref_name }}
+        run: |
+          box compile
+          mv dev.phar dist/dev.phar
 
       - name: Build DEV binary for macOS
         working-directory: spc
         run: |
-            php -d memory_limit=-1 bin/spc micro:combine $GITHUB_WORKSPACE/builds/dev.phar -O ${{ steps.vars.outputs.FILENAME }}
+            php -d memory_limit=-1 bin/spc micro:combine $GITHUB_WORKSPACE/dist/dev.phar -O $GITHUB_WORKSPACE/dist/dev
 
-      - name: "Create Checksums"
-        run: sha256sum ${{ steps.vars.outputs.FILENAME }} > ${{ steps.vars.outputs.CHECKSUMS }}
-
-      - name: Upload binaries to release
-        uses: softprops/action-gh-release@v1
-        if: ${{startsWith(github.ref, 'refs/tags/') }}
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
         with:
-          files: |
-            ${{ steps.vars.outputs.FILENAME }}
-            ${{ steps.vars.outputs.CHECKSUMS }}
+          name: dev-macos-aarch64
+          path: dist/dev
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: build-meta
+          path: |
             spc/buildroot/build-extensions.json
             spc/buildroot/build-libraries.json
+
