--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -6,10 +6,11 @@ on:
       - main
 
 jobs:
-  app-tests:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Cache Composer packages
         id: composer-cache
         uses: actions/cache@v3
@@ -18,9 +19,21 @@ jobs:
           key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-php-
+
       - name: Setup PHP
         uses: shivammathur/setup-php@master
         with:
           php-version: 8.2
           extensions: mbstring, bcmath
           tools: composer:v2
+          coverage: pcov
+      
+      - name: Install Composer dependencies
+        run: composer install --no-progress --no-suggest
+        if: steps.composer-cache.outputs.cache-hit != 'true'
+
+      - name: Check code styles
+        run: vendor/bin/pint --test -v
+
+      - name: Run tests
+        run: vendor/bin/pest --coverage -vv
