--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,15 +13,19 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
-    name: Build ${{ github.ref_name }} on macOS x86_64
-    runs-on: macos-latest-xlarge
-    strategy:
-      matrix:
-        os:
-          - "macos-aarch64"
+  tests:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Cache Composer Packages
+        id: composer-cache
+        uses: actions/cache@v3
+        with:
+          path: vendor
+          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-php-
 
       - name: Setup PHP
         uses: shivammathur/setup-php@master
@@ -29,102 +33,14 @@ jobs:
           php-version: 8.2
           extensions: mbstring, bcmath
           tools: composer:v2
+          coverage: pcov
+      
+      - name: Install Composer Dependencies
+        run: composer install --no-progress --no-suggest
+        if: steps.composer-cache.outputs.cache-hit != 'true'
 
-      - name: Checkout crazywhalecc/static-php-cli
-        uses: actions/checkout@v4
-        with:
-          repository: crazywhalecc/static-php-cli
-          path: spc
+      - name: Check Code Styles
+        run: vendor/bin/pint --test -v
 
-      - run: |
-          brew tap box-project/box
-          brew install automake gzip box
-          echo "SPC_BUILD_OS=macos" >> $GITHUB_ENV
-          box -v
-
-      - id: cache-composer-deps
-        uses: actions/cache@v4
-        with:
-          path: vendor
-          key: composer-dependencies
-
-      - if: steps.cache-composer-deps.outputs.cache-hit != 'true'
-        run: composer install
-
-      - name: Resolve Variables
-        id: vars
-        run: |
-          SPC_EXTENSIONS="bcmath,calendar,ctype,curl,dba,dom,exif,session,filter,fileinfo,iconv,mbstring,mbregex,openssl,pcntl,pdo,pdo_mysql,pdo_sqlite,phar,posix,readline,simplexml,sockets,sqlite3,tokenizer,xml,xmlreader,xmlwriter,zip,zlib,sodium,swoole,session"
-          SPC_EXTENSIONS_SHA256=$(echo -n $SPC_EXTENSIONS | shasum -a 256 | awk '{print $1}')
-          PHP_VERSION=8.2
-          FILENAME=dev-${{ github.ref_name }}-${{ matrix.os }}
-
-          echo "SPC_EXTENSIONS=$SPC_EXTENSIONS" >> $GITHUB_OUTPUT
-          echo "SPC_EXTENSIONS_SHA256=$SPC_EXTENSIONS_SHA256" >> $GITHUB_OUTPUT
-          echo "PHP_VERSION=$PHP_VERSION" >> $GITHUB_OUTPUT
-          echo "CACHE_KEY=php-$PHP_VERSION-dependencies-$SPC_EXTENSIONS_SHA256" >> $GITHUB_OUTPUT
-          echo "FILENAME=$FILENAME" >> $GITHUB_OUTPUT
-          echo "FILEPATH=$GITHUB_WORKSPACE/dist/$FILENAME" >> $GITHUB_OUTPUT
-          echo "CHECKSUMS=$GITHUB_WORKSPACE/dist/CHECKSUMS" >> $GITHUB_OUTPUT
-
-      - id: cache-download
-        uses: actions/cache/restore@v4
-        with:
-          path: |
-            spc/downloads
-            spc/buildroot
-          key: ${{ steps.vars.outputs.CACHE_KEY }}
-
-      - name: Setup Spc
-        run: composer update --no-dev --classmap-authoritative
-        working-directory: spc
-
-      - if: steps.cache-download.outputs.cache-hit != 'true'
-        run: ./bin/spc download --with-php=8.2 --for-extensions=${{ steps.vars.outputs.SPC_EXTENSIONS }} --debug
-        working-directory: spc
-
-      - if: steps.cache-download.outputs.cache-hit != 'true'
-        run: ./bin/spc build --build-micro --build-cli --with-micro-fake-cli ${{ steps.vars.outputs.SPC_EXTENSIONS }}
-        working-directory: spc
-
-      - if: steps.cache-download.outputs.cache-hit != 'true'
-        name: Save builds to cache
-        uses: actions/cache/save@v4
-        with:
-          path: |
-            spc/downloads
-            spc/buildroot
-          key: ${{ steps.vars.outputs.CACHE_KEY }}
-
-      - name: Build PHAR
-        run: php dev app:build dev.phar --build-version=${{ github.ref_name }}
-
-      - name: Build DEV binary for macOS
-        working-directory: spc
-        run: |
-            php -d memory_limit=-1 bin/spc micro:combine $GITHUB_WORKSPACE/builds/dev.phar -O ${{ steps.vars.outputs.FILEPATH }}
-            chmod +x ${{ steps.vars.outputs.FILEPATH }}
-
-      - name: "Create Checksums"
-        run: |
-          cd $GITHUB_WORKSPACE/dist
-          shasum -a 256 ${{ steps.vars.outputs.FILENAME }} > ${{ steps.vars.outputs.CHECKSUMS }}
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: build-meta
-          path: |
-            ${{ steps.vars.outputs.FILEPATH }}
-            ${{ steps.vars.outputs.CHECKSUMS }}
-            spc/buildroot/build-extensions.json
-            spc/buildroot/build-libraries.json
-
-      - name: Upload binaries to release
-        uses: softprops/action-gh-release@v1
-        if: ${{ startsWith(github.ref, 'refs/tags/') }}
-        with:
-          files: |
-            ${{ steps.vars.outputs.FILEPATH }}
-            ${{ steps.vars.outputs.CHECKSUMS }}
-            spc/buildroot/build-extensions.json
-            spc/buildroot/build-libraries.json
+      - name: Run Tests
+        run: vendor/bin/pest --coverage -vv
