--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         uses: shivammathur/setup-php@master
         with:
           php-version: 8.2
-          extensions: mbstring, bcmath
+          extensions: mbstring, bcmath, swoole
           tools: composer:v2
           coverage: pcov
       
