--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "ext-swoole": "*",
         "guzzlehttp/guzzle": "^7.5",
         "illuminate/http": "^10.0",
+        "illuminate/view": "^10.0",
         "laravel-zero/framework": "^10.2.0",
         "laravel-zero/phar-updater": "^1.3",
         "laravel/prompts": "^0.1.0",
